# pika_sim

./: .gitignore  README.md  pyproject.toml  run_all_evals.sh
mujoco/: camera_viewer.py  pick_and_place.py  pika_gripper_pickplace.xml  record_dataset.py  run_sim.py
pika_gripper_mujoco_sim/: README.md  eval_closed_loop.py  eval_common.py  eval_open_loop.py  pick_and_place.py  pika_gripper.xml  pika_sensor.xml  record_dataset.py
trossen_gripper_mujoco_sim/: README.md  camera_viewer.py  pick_and_place.py  record_dataset.py  run_sim.py  trossen_gripper.xml  trossen_gripper_pickplace.xml
trossen_gripper_mujoco_sim/my_dataset/: README.md
