[project]
name = "pika-gripper-sim"
version = "0.1.0"
description = "MuJoCo simulation and evaluation for Pika/Trossen gripper pick-and-place"
requires-python = ">=3.11"
dependencies = [
    "mujoco>=3.0",
    "numpy",
    "h5py",
    "opencv-python",
]

[project.optional-dependencies]
# Install the inference client for running eval scripts.
# If robot-inference is cloned locally, install with:
#   pip install -e /path/to/robot-inference/client[act]
eval = [
    "pyzmq",
    "msgpack",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
