[project]
name = "pika-gripper-sim"
version = "0.1.0"
description = "MuJoCo simulation and evaluation for Pika/Trossen gripper pick-and-place"
requires-python = ">=3.11"
dependencies = [
    "mujoco>=3.0",
    "numpy",
    "h5py",
    "opencv-python",
]

[project.optional-dependencies]
eval = [
    "pyzmq",
    "msgpack",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
